--- a/body/discussion.tex
+++ b/body/discussion.tex
@@ -7,3 +7,7 @@ development, or any other topic. />
 
 We both need to develop a better base understanding of our AI generation, Data poisoning and many other topics to understand how we could poison video best, and as hardware efficient as possible.
 Thus, we currently are doing AI workshop labs in our freetime, advised by our project overseer Dr. Punpiti, starting since 7 January 2025.
+
+AI labs
+- Cat-dog Classification
+- stAdv application
