--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -10,7 +10,7 @@ The widespread use of this AI has led to concerns about copyright infringement\t
 
 One of the most alarming consequences of AI-generated video technology is impersonation\textsuperscript{[7]}, often referred to as "deepfakes\textsuperscript{[8]}." AI can create realistic videos of individuals, making them appear to say or do things they never did. This poses risks in identity theft\textsuperscript{[9]}, misinformation\textsuperscript{[10]}, fraud\textsuperscript{[11]}, and political manipulation\textsuperscript{[12]}. The ability to create hyper-realistic fake videos raises concerns about trust in digital content and calls for advanced detection methods to counteract malicious use.
 
-Data poisoning is a method of corrupting AI models by injecting misleading or harmful data into their training sets\textsuperscript{[13]}, ensuring that generative models\textsuperscript{[14]} cannot easily exploit original artistic content. However, it would be considered an aspect of data security\textsuperscript{[15]}, and restrict malicious actors from exploiting your data against your interests.
+Data poisoning is a method of corrupting AI models by injecting misleading or harmful data into their training sets\textsuperscript{[13]}, ensuring that generative models\textsuperscript{[14]} cannot easily exploit original artistic content. It is an aspect of data security\textsuperscript{[15]}, and restrict malicious actors from exploiting your data against your interests.
 
 \section{Problem Statement}
 \label{section:problem-statement}
