Update final Stakeholder and Userstories

--- a/body/requirementanalysis.tex
+++ b/body/requirementanalysis.tex
@@ -18,15 +18,19 @@
 \label{section:stakeholder-analysis}
 
 \begin{enumerate}[leftmargin=80pt]
-    \item \textbf{Animators \& Video Editors:} The primary stakeholders are content creators and 
+    \item \textbf{Animators \& Video Artists:} The primary stakeholders are content creators and 
     video artists who want to protect their work from unauthorized AI training.
+    \item \textbf{Regulatory \& Legal Bodies:} Government and industry groups ensuring 
+    compliance with copyright laws, AI ethics, and intellectual property protection.
+    \item \textbf{Cybersecurity \& Digital Rights Organizations:} Groups that focus on copyright protection, 
+    AI misuse prevention, and ethical AI practices. They may promote or validate the effectiveness of Protractor.
 
 \end{enumerate}
 
 \section{User Stories}
 \label{section:user-stories}
 
-\userstory{Protecting Video Content from AI Training%
+\userstory{Upload \& Protecting Video Content from AI Training%
 }{digital content creator or video artist%
 }{apply adversarial techniques to my videos to prevent AI models from copying my style%
 }{I can protect my work from unauthorized AI training while keeping the video unchanged for humans}
@@ -35,11 +39,6 @@
 }{digital content creator or video artist%
 }{apply AI poisoning techniques without affecting the video’s visual quality for humans%
 }{my audience can still enjoy my videos without noticeable distortions}
-
-\userstory{Uploading Videos for AI Poisoning%
-}{any user who wants to protect their video from AI%
-}{upload my video to the system%
-}{I can have my content processed and protected}
 
 \userstory{Processing Videos Efficiently%
 }{content creator with large video files%
