--- a/body/requirementanalysis.tex
+++ b/body/requirementanalysis.tex
@@ -46,6 +46,11 @@
 }{apply AI poisoning techniques without affecting the video’s visual quality for humans%
 }{my audience can still enjoy my videos without noticeable distortions}
 
+\userstory{Customizing Poisoning Parameters%
+}{digital content creator or video artist%
+}{adjust the poisoning settings such as intensity level and render quality before starting the process%
+}{I can control how strongly the video is protected while balancing quality and performance}
+
 \userstory{Processing Videos Efficiently%
 }{content creator with large video files%
 }{have my videos processed quickly without long waiting times%
