--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -32,9 +32,7 @@ Data poisoning is a method of corrupting AI models\textsuperscript{[2]} by injec
 
 \section{Problem Statement}
 \label{section:problem-statement}
-
-\subsection{Technical Problems}
-\label{subsection:Technical-Problems}
+The problem this project aims to solve has been well defined in the background section. \newline
 
 As of currently, there is a solid foundation of research on the adversarial poisoning tactics\textsuperscript{[40]} against Video Generative AI, but there is currently no software that simplifies the process for common use. People may have the idea to extract the video’s graphics frame by frame, then use the existing static Image Poisoning Processor to Poison frame by frame, then reassemble them back into their video form, but there’s still technical problems, such as:
 
