--- a/document.tex
+++ b/document.tex
@@ -23,7 +23,7 @@
 
 %% -----------------------------------
 % Edit the variables for the paper here!
-\def \srsTitle{Protractor}
+\def \srsTitle{Protractor \\ (Project Proposal)}
 \def \srsAuthorOne{Nantawan Paramapooti}
 \def \srsAuthorTwo{Pichayoot Tanasinanan}
 \def \srsAcademicYear{2026}
